# CppCMakeVcpkgTemplate

./: CMakeLists.txt  CMakePresets.json  Makefile  vcpkg.json
.github/workflows/: hosted-ninja-vcpkg_submod.yml  hosted-pure-workflow.yml  release.yml
benchmarks/: bench.cpp
scripts/: run-clang-tidy.py
src/: main.cpp  read.cpp  read.h  sequence.cpp  sequence.h  test.cpp
test/: add_tests.cpp  blend_tests.cpp  compare_tests.cpp  movemask_tests.cpp  pack_tests.cpp  packed_aligned_right_tests.cpp  shift_tests.cpp  shuffle_tests.cpp
